kubernetes/apps/observability/metrics-ingest/app/alert-ingest.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alert-ingest
spec:
  hostnames: ["alert-ingest.home.kelch.io"]
  parentRefs:
    - name: gateway-services
      namespace: network
      sectionName: https
  rules:
    - matches:
        - method: POST
          path:
            type: Exact
            value: /api/v2/alerts
      backendRefs:
        - name: vmauth-metrics-ingest
          port: 8427
